# sea-orm-demo

./: Cargo.toml  Dockerfile  docker-compose.yml  gen-entities.sh
.devcontainer/: devcontainer.json  docker-compose.yml
entities/: Cargo.toml
entities/src/: bakery.rs  cake.rs  cake_filling.rs  chef.rs  filling.rs  fruit.rs  lib.rs  prelude.rs
examples/: insert.rs  select.rs
migration/: Cargo.toml
migration/src/: main.rs
migration/src/migration/: m20230822_create_bakery_table.rs  m20230823_create_chef_table.rs  m20230901_create_cake_filling_table.rs  m20230901_create_cake_table.rs  m20230901_create_filling_table.rs  m20230901_create_fruit_table.rs  mod.rs
src/: lib.rs
