[package]
name = "sea-orm-demo"
version = "0.1.0"
edition = "2021"

[workspace]
members = ["migration", "entities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace.dependencies]
sea-orm = { version = "^0.12.2", features = [
    "sqlx-mysql",
    "runtime-async-std-rustls",
    "macros",
] }
serde = "1.0.188"
async-std = { version = "1.12.0", features = ["attributes"] }

[dependencies]
sea-orm = { workspace = true }
serde = { workspace = true }
lazy_static = "1.4.0"
tracing-subscriber = "0.3.17"
tracing = "0.1.37"
