[package]
name = "migration"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sea-orm-migration = { version = "0.12.2", features = [
    "sqlx-mysql",
    "runtime-async-std-rustls",
] }
clap = { version = "4.4.1", features = ["derive"] }
async-std = { workspace = true }
sea-orm-demo = { path = "../../sea-orm-demo" }
